# UAAMGPCG

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GPU_OPTIMIZATION_GAP.md  README.md
include/advection/: advection.h  advection_3d.h
include/bc/: boundary_condition.h  patches.h  patches_3d.h
include/boundary/: boundary.h
include/config/: config.h
include/core/: grid.h  grid_3d.h  mesh.h  mesh_3d.h
include/fields/: field.h  field_3d.h
include/force/: force.h
include/geometry/: cylinder_model.h
include/io/: vtk_writer.h  vtk_writer_3d.h
include/lfm/: advection.h  boundary.h  config.h  flow_map_2d.h  grid.h  lfm_simulator.h  poisson_cg.h  poisson_jacobi.h  poisson_pcg.h  poisson_rbgs.h  pressure.h  vtk_io.h
include/ops/: operators.h  operators_3d.h
include/pressure/: pressure.h  pressure_3d.h
include/scalar/: scalar_field_3d.h
include/scenarios/: delta_wing.h  fire_ball.h  karman.h  trefoil_knot.h  vortex_ring.h  wind_turbine.h
include/simulator/: factory.h  simulator.h  simulator_3d.h  simulator_base.h
include/solver/: cuda_pcg_solver.h  cuda_pcg_solver_3d.h  factory.h  factory_3d.h  jacobi.h  jacobi_3d.h  pcg.h  pcg_3d.h  poisson_cg.h  poisson_jacobi.h  poisson_pcg.h  poisson_rbgs.h  poisson_solver.h  rbgs.h  rbgs_3d.h  solver.h  solver_3d.h  solver_factory.h
include/solver/cuda/: cuda_cg.h  cuda_cg_3d.h  cuda_common.h  cuda_common_3d.h  cuda_pcg.h  cuda_pcg_3d.h  cuda_uaamg_preconditioner.h  cuda_uaamg_preconditioner_3d.h
include/solver/preconditioner/: amg_preconditioner.h  amg_preconditioner_3d.h  gmg_preconditioner.h  gmg_preconditioner_3d.h  identity_preconditioner.h  identity_preconditioner_3d.h  preconditioner.h  preconditioner_3d.h  uaamg_preconditioner.h  uaamg_preconditioner_3d.h
solvers/: CMakeLists.txt  amgpcg.cpp  cg.cpp  jacobi.cpp  rbgs.cpp  vcycle.cpp
src/: CMakeLists.txt  lfm_2d.cpp  main.cpp
src/advection/: advection.cpp  advection_3d.cpp
src/bc/: patches.cpp  patches_3d.cpp
src/boundary/: boundary.cpp
src/config/: config.cpp
src/core/: grid.cpp  grid_3d.cpp
src/force/: force.cpp
src/geometry/: cylinder_model.cpp
src/io/: vtk_writer.cpp  vtk_writer_3d.cpp
src/lfm/: advection.cpp  boundary.cpp  flow_map_2d.cpp  grid.cpp  lfm_simulator.cpp  poisson_cg.cpp  poisson_jacobi.cpp  poisson_pcg.cpp  poisson_rbgs.cpp  pressure.cpp  vtk_io.cpp
src/pressure/: pressure.cpp  pressure_3d.cpp
src/scalar/: scalar_field_3d.cpp
src/scenarios/: delta_wing.cpp  fire_ball.cpp  karman.cpp  trefoil_knot.cpp  vortex_ring.cpp  wind_turbine.cpp
src/simulator/: factory.cpp  simulator.cpp  simulator_3d.cpp
src/solver/: CMakeLists.txt  amgpcg.cpp  cg.cpp  factory.cpp  factory_3d.cpp  jacobi.cpp  jacobi_3d.cpp  pcg.cpp  pcg_3d.cpp  poisson_cg.cpp  poisson_jacobi.cpp  poisson_pcg.cpp  poisson_rbgs.cpp  rbgs.cpp  rbgs_3d.cpp  solver_factory.cpp
src/solver/cuda/: CMakeLists.txt  cuda_cg.cu  cuda_cg_3d.cu  cuda_pcg.cu  cuda_pcg_3d.cu  cuda_pcg_3d_opt.cu  cuda_pcg_solver.cu  cuda_pcg_solver_3d.cu  cuda_uaamg_preconditioner.cu  cuda_uaamg_preconditioner_3d.cu  cuda_uaamg_preconditioner_3d_opt.cu  cuda_uaamg_preconditioner_3d_opt_f.cu  prof_vcycle.cu  test_apply_twice.cu  test_cuda_cg.cu  test_cuda_cg_3d.cu  test_cuda_full.cu  test_cuda_kernels.cu  test_cuda_uaamg.cu  test_cuda_uaamg_3d.cu  test_fp32_vcycle.cu  test_mixed_solve.cu  test_paper_bench.cu  test_paper_bench_f.cu  test_rbgs_micro.cu  test_solver_perf_3d_gpu.cu  test_tiled_soa.cu
src/solver/preconditioner/: amg_preconditioner.cpp  amg_preconditioner_3d.cpp  gmg_preconditioner.cpp  gmg_preconditioner_3d.cpp  uaamg_preconditioner.cpp  uaamg_preconditioner_3d.cpp
test/: CMakeLists.txt  test_amgpcg.cpp  test_cg.cpp  test_common.h  test_integration.cpp  test_jacobi.cpp  test_lfm.cpp  test_utils.h  test_vcycle.cpp  test_velocity_fields.h
test/debug/: test_pcg_debug.cpp  test_sign_check.cpp
test/integration/: test_integration.cpp  test_karman_bench.cpp  test_karman_bench_3d.cpp  test_karman_bench_3d_gpu.cu  test_karman_bench_gpu.cu  test_karman_diag.cpp  test_karman_validate.cpp  test_karman_validate_gpu.cu  test_lfm.cpp  test_lfm_instability.cpp  test_lfm_perturbed_cylinder.cpp  test_solver_perf_3d.cpp  test_uaamg.cpp  test_uaamg_3d.cpp
test/solver/: test_amgpcg.cpp  test_cg.cpp  test_cg_3d.cpp  test_jacobi.cpp  test_jacobi_3d.cpp  test_vcycle.cpp
tools/: analyze_vtk.py  check_force.py  check_shedding.py  create_animation.py  diagnose_karman.py  make_karman_animation.py  make_karman_wake_animation.py  plot_karman_vortices.py  run_delta_wing.cpp  run_fire_ball.cpp  run_karman_chorin.cpp  run_karman_long.cpp  run_karman_long_gpu.cu  run_trefoil_knot.cpp  run_vortex_ring_collision.cpp  run_vortex_ring_connection.cpp  run_wind_turbine.cpp  validate_karman.py
tools/karman/our_solver/: run_benchmark.cpp
tools/karman_vortex_street/: README.md  config.py  generate_inputs.py  plot_results.py  run_all.py  run_simulations.py
tools/memory/: lfm-karman-reproduction.md
tools/perf/: PERF_ANALYSIS.md  benchmark_baseline_fp64.txt  ncu_fp32_kernels.csv  ncu_fp32_summary.txt  ncu_memory_metrics.csv  ncu_memory_metrics.txt  ncu_optimized_kernels.csv  ncu_optimized_summary.txt  ncu_unoptimized_summary.txt
